Migrate autocomplete-places to ign repo

--- a/src/tsconfig.es5.json
+++ b/src/tsconfig.es5.json
@@ -14,8 +14,7 @@
       "es2015",
       "dom"
     ],
-    "skipLibCheck": true,
-    "types": []
+    "skipLibCheck": true
   },
   "angularCompilerOptions": {
     "annotateForClosureCompiler": true,
