--- a/package.json
+++ b/package.json
@@ -36,18 +36,21 @@
     "url": "http://devgit.dev.us.corp:7990/projects/NUI/repos/ignite-design-system/issues"
   },
   "devDependencies": {
+    "@angular/animations": "4.4.4",
     "@angular/cdk": "^2.0.0-beta.10",
     "@angular/common": "4.4.4",
     "@angular/compiler": "4.4.4",
     "@angular/compiler-cli": "4.4.4",
     "@angular/core": "4.4.4",
     "@angular/forms": "4.4.4",
+    "@angular/http": "4.4.4",
     "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
     "@angular/router": "4.4.4",
     "@compodoc/compodoc": "^1.0.0-beta.10",
     "@ngx-translate/core": "7.1.0",
+    "@types/googlemaps": "^3.29.2",
     "@types/jest": "^19.2.3",
     "@types/node": "~6.0.60",
     "angular-in-memory-web-api": "^0.3.2",
