Fix problems launching playground

--- a/package.json
+++ b/package.json
@@ -64,13 +64,14 @@
     "jest": "^20.0.3",
     "jest-preset-angular": "^2.0.2",
     "lite-server": "^2.3.0",
+    "lodash": "^4.17.4",
     "node-sass": "^4.5.2",
     "node-sass-tilde-importer": "^1.0.0",
     "node-watch": "^0.5.2",
     "protractor": "~5.1.0",
     "rollup": "^0.41.6",
     "run-sequence": "^1.2.2",
-    "rxjs": "^5.1.0",
+    "rxjs": "5.4.3",
     "systemjs": "^0.20.12",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
