--- a/package.json
+++ b/package.json
@@ -41,18 +41,18 @@
     "url": "http://devgit.dev.us.corp:7990/projects/NUI/repos/ignite-design-system/issues"
   },
   "devDependencies": {
-    "@angular/animations": "4.4.4",
-    "@angular/cdk": "^2.0.0-beta.10",
-    "@angular/common": "4.4.4",
-    "@angular/compiler": "4.4.4",
-    "@angular/compiler-cli": "4.4.4",
-    "@angular/core": "4.4.4",
-    "@angular/forms": "4.4.4",
-    "@angular/http": "4.4.4",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "4.4.4",
-    "@angular/platform-browser-dynamic": "4.4.4",
-    "@angular/router": "4.4.4",
+    "@angular/animations": "^5.0.0",
+    "@angular/cdk": "^5.0.0-rc0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.0-rc0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@compodoc/compodoc": "^1.0.0-beta.10",
     "@ngx-translate/core": "7.1.0",
     "@types/googlemaps": "^3.29.2",
@@ -76,11 +76,11 @@
     "protractor": "~5.1.0",
     "rollup": "^0.41.6",
     "run-sequence": "^1.2.2",
-    "rxjs": "5.4.3",
+    "rxjs": "^5.4.3",
     "systemjs": "^0.20.12",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0",
+    "typescript": "2.4.2",
     "zone.js": "^0.8.4"
   },
   "engines": {
@@ -92,13 +92,13 @@
   "jsnext:main": "./dist/ignite-design-system.js",
   "typings": "./dist/ignite-design-system.d.ts",
   "peerDependencies": {
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/core": "4.4.4",
-    "@angular/forms": "4.4.4",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/router": "4.4.4",
+    "@angular/cdk": "^5.0.0-rc0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/material": "^5.0.0-rc0",
+    "@angular/router": "^5.0.0",
     "@ngx-translate/core": "7.1.0",
-    "rxjs": "^5.1.0",
+    "rxjs": "^5.4.3",
     "zone.js": "^0.8.4"
   }
 }
