--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/jest": "^19.2.3",
     "@types/node": "~6.0.60",
     "angular-in-memory-web-api": "^0.3.2",
+    "angular-playground": "^1.7.0",
     "codelyzer": "~2.0.0",
     "concurrently": "^3.4.0",
     "core-js": "^2.4.1",
