--- a/package.json
+++ b/package.json
@@ -87,19 +87,5 @@
   "engines": {
     "node": ">=6.0.0"
   },
-  "dependencies": {},
-  "main": "./dist/ignite-design-system.umd.js",
-  "module": "./dist/ignite-design-system.js",
-  "jsnext:main": "./dist/ignite-design-system.js",
-  "typings": "./dist/ignite-design-system.d.ts",
-  "peerDependencies": {
-    "@angular/cdk": "^5.0.0-rc0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/material": "^5.0.0-rc0",
-    "@angular/router": "^5.0.0",
-    "@ngx-translate/core": "7.1.0",
-    "rxjs": "^5.4.3",
-    "zone.js": "^0.8.4"
-  }
+  "dependencies": {}
 }
