Add a build:watch script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng-packagr -p package.json",
+    "build:watch": "chokidar 'src/**/*.ts' -c './bin/build' --initial",
     "lint": "tslint --project tsconfig.json src/**/*.ts",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -78,6 +79,7 @@
     "@types/jest": "^19.2.3",
     "@types/node": "~6.0.60",
     "angular-in-memory-web-api": "^0.5.2",
+    "chokidar-cli": "^1.2.0",
     "codelyzer": "^4.0.2",
     "core-js": "^2.4.1",
     "jest": "^20.0.3",
