Modifying build script for doc site

--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng-packagr -p package.json",
+    "build:demo": "ng build",
     "build:watch": "chokidar 'src/**/*.ts' -c './bin/build' --initial",
-    "package": "tar cvf $npm_package_name-$npm_package_version.tgz manifest-* Staticfile dist node_modules",
+    "package": "tar cvf $npm_package_name-$npm_package_version.tgz manifest-* Staticfile dist-demo",
     "lint": "tslint --project tsconfig.json src/**/*.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand",
     "ci:test": "npm run test:ci",
-    "ci:package": "npm run build && npm prune --production && npm run package"
+    "ci:package": "npm run build && npm run build:demo && npm prune --production && npm run package"
   },
   "jest": {
     "preset": "jest-preset-angular",
