updated to jest 22

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:watch": "chokidar 'src/**/*.ts' -c './bin/build' --initial",
     "package": "tar cvf $npm_package_name-$npm_package_version.tgz manifest-* Staticfile dist-demo",
     "lint": "tslint --project tsconfig.json src/**/*.ts",
-    "test": "jest",
+    "test": "jest --json --outputFile=test/jest-output.json",
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand",
     "ci:test": "npm run test:ci",
@@ -26,7 +26,7 @@
       "<rootDir>/src/tsconfig.spec.json",
       "<rootDir>/test/*"
     ],
-    "coverageReporters": ["json-summary", "text-summary", "lcov"]
+    "coverageReporters": ["json-summary", "text", "lcov"]
   },
   "ngPackage": {
     "lib": {
