--- a/generator-component/package.json
+++ b/generator-component/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.2",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
+    "to-markdown": "^3.1.1",
     "yeoman-generator": "^1.0.0"
   }
 }
