--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "apollo-link-ws": "^1.0.7",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
+    "ignite-common": "^0.13.3",
     "subscriptions-transport-ws": "^0.9.6"
   },
   "peerDependencies": {
