--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "lint": "tslint --project tsconfig.json src/**/*.ts",
     "test": "jest --coverage --json --outputFile=test/jest-output.json",
     "test:watch": "jest --watch",
-    "test:ci": "jest --runInBand --coverage --json --outputFile=test/jest-output.json",
+    "test:ci": "jest --runInBand --coverage --json --outputFile=test/jest-output.json && npm run push-to-playground-service",
     "ci:test": "npm run test:ci",
-    "ci:package": "npm run build && npm run build:demo && npm prune --production && npm run package"
+    "ci:package": "npm run build && npm run build:demo && npm prune --production && npm run package",
+    "push-coverage": "echo 'starting coverage push...' && curl -X POST https://playground-service.apps.mia.ulti.io/v1/coverage -d @coverage/coverage-summary.json --header 'Content-Type: application/json'",
+    "push-jest-build": "echo 'starting jest build push...' && curl -X POST https://playground-service.apps.mia.ulti.io/v1/jestoutput -d @test/jest-output.json --header 'Content-Type: application/json'",
+    "push-to-playground-service": "npm run push-coverage && npm run push-jest-build"
   },
   "jest": {
     "preset": "jest-preset-angular",
