--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   "ngPackage": {
     "lib": {
       "entryFile": "./src/index.ts",
+      "umdModuleIds": {
+        "rxjs": "rxjs"
+      },
       "externals": {
         "@angular/material": "ng.material",
         "rxjs": "Rx",
@@ -63,9 +66,7 @@
   "bugs": {
     "url": "http://devgit.dev.us.corp:7990/projects/NUI/repos/ignite-design-system/issues"
   },
-  "dependencies": {
-    "ignite-common": "^0.13.3"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "@angular/animations": "^5.0.0",
     "@angular/cdk": "^5.0.0-rc0",
@@ -77,7 +78,17 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular2-cookie": "^1.2.6",
+    "apollo-angular": "^1.0.1",
+    "apollo-angular-link-http": "^1.0.2-beta.0",
+    "apollo-cache-inmemory": "^1.1.7",
+    "apollo-client": "^2.2.2",
+    "apollo-link-ws": "^1.0.7",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.8.0",
+    "ignite-common": "^0.13.3",
     "rxjs": "^5.4.3",
+    "subscriptions-transport-ws": "^0.9.6",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -99,17 +110,32 @@
     "@types/jest": "^19.2.3",
     "@types/node": "~6.0.60",
     "angular-in-memory-web-api": "^0.5.2",
+    "angular2-cookie": "^1.2.6",
+    "apollo-angular": "^1.0.1",
+    "apollo-angular-link-http": "^1.0.2-beta.0",
+    "apollo-cache-inmemory": "^1.1.7",
+    "apollo-client": "^2.2.2",
+    "apollo-link-ws": "^1.0.7",
+    "chokidar-cli": "^1.2.0",
     "codelyzer": "^4.0.2",
     "core-js": "^2.4.1",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.8.0",
+    "ignite-common": "^0.13.3",
     "jest": "^22.0.0",
     "jest-preset-angular": "^2.0.2",
-    "ng-packagr": "^1.6.0",
+    "marked": "^0.3.7",
+    "ng-packagr": "^2.4.0",
     "raw-loader": "^0.5.1",
     "rxjs": "^5.4.3",
     "sonarqube-scanner-node": "^0.0.4",
+    "subscriptions-transport-ws": "^0.9.6",
     "ts-node": "~2.0.0",
     "tslint": "^5.8.0",
     "typescript": "2.4.2",
     "zone.js": "^0.8.4"
+  },
+  "engines": {
+    "node": ">=6.0.0"
   }
 }
