--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng-packagr -p package.json",
     "build:watch": "chokidar 'src/**/*.ts' -c './bin/build' --initial",
     "package": "tar cvf $npm_package_name-$npm_package_version.tgz manifest-* Staticfile dist-demo",
+    "sonar": "echo Publishing to sonar for branch: $SONARQUBE_BRANCH && sonarqube-scanner-node -Dsonar.branch=$SONARQUBE_BRANCH",
     "lint": "tslint --project tsconfig.json src/**/*.ts",
     "test": "jest --coverage --json --outputFile=test/jest-output.json",
     "test:watch": "jest --watch",
@@ -108,6 +109,7 @@
     "ts-node": "~2.0.0",
     "tslint": "^5.8.0",
     "typescript": "2.4.2",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "sonarqube-scanner-node": "^0.0.4"
   }
 }
