Updated Sonar Config and Version

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,9 +9,9 @@ sonar.sources=src
 sonar.language=ts
 sonar.sourceEncoding=UTF-8
 
-sonar.ts.tslint.configPath=tslint.json
-sonar.ts.tslint.projectPath=tsconfig.json
-sonar.ts.tslint.path=node_modules/tslint/bin/tslint
-sonar.ts.tslint.typeCheck=true
-sonar.ts.coverage.lcovReportPath=coverage/lcov.info
+sonar.typescript.tslint.configPath=tslint.json
+sonar.typescript.tslint.projectPath=tsconfig.json
+sonar.typescript.tslint.path=node_modules/tslint/bin/tslint
+sonar.typescript.tslint.typeCheck=true
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.coverage.exclusions=**/*.spec.ts,**/*.sandbox.ts,**/*.d.ts,**/*.interface.ts,**/*types.ts,**/*jest-global-mocks.ts,**/*jest.ts,src/index.ts
