--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "@compodoc/compodoc": "^1.0.0-beta.10",
     "@types/googlemaps": "^3.29.2",
     "@types/jest": "^19.2.3",
-    "@types/node": "^6.0.114",
+    "@types/node": "~6.0.60",
     "angular-playground": "^4.0.0",
     "chokidar-cli": "^1.2.0",
     "codelyzer": "^4.0.2",
