added language level to ngPackage to allow for the includes() method be used on string[] and others...

--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
       "umdModuleIds": {
         "rxjs": "rxjs"
       },
+      "languageLevel": [
+        "dom",
+        "es2017"
+      ],
       "externals": {
         "@angular/material": "ng.material",
         "rxjs": "Rx",
