--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "ignite-common": "^0.13.3",
+    "ignite-common": "^0.13.9",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.4"
   },
@@ -110,7 +110,7 @@
     "@compodoc/compodoc": "^1.0.0-beta.10",
     "@types/googlemaps": "^3.29.2",
     "@types/jest": "^19.2.3",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.114",
     "angular-playground": "^4.0.0",
     "chokidar-cli": "^1.2.0",
     "codelyzer": "^4.0.2",
