--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ignite-design-system",
-  "version": "1.0.11",
+  "version": "2.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +8,7 @@
     "build:watch": "chokidar 'src/**/*.ts' -c './bin/build' --initial",
     "package": "tar cvf $npm_package_name-$npm_package_version.tgz manifest-* Staticfile dist",
     "sonar": "echo Publishing to sonar for branch: $SONARQUBE_BRANCH && sonarqube-scanner-node -Dsonar.branch=$SONARQUBE_BRANCH",
-    "lint": "tslint --project tsconfig.json src/**/*.ts && ng lint --type-check",
+    "lint": "tslint --project tsconfig.json src/**/*.ts && ng lint",
     "prettier": "prettier --single-quote --trailing-comma es5 --print-width 100 --write 'src/**/*.{js,ts}' --list-different",
     "precommit": "npm run prettier && npm run lint",
     "test": "jest --coverage --json --outputFile=test/jest-output.json",
@@ -77,36 +77,26 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/cdk": "^5.0.0-rc0",
-    "@angular/common": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/material": "^5.0.0-rc0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
     "ignite-common": "^0.13.9",
-    "rxjs": "^5.4.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.7.0",
     "@angular-devkit/core": "^0.6.8",
-    "@angular/animations": "^5.0.0",
-    "@angular/cdk": "^5.0.0-rc0",
-    "@angular/cli": "^1.7.4",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/material": "^5.0.0-rc0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "@angular/service-worker": "^6.0.9",
+    "@angular/animations": "^6.1.4",
+    "@angular/cdk": "^6.4.6",
+    "@angular/cli": "^6.1.4",
+    "@angular/common": "^6.1.4",
+    "@angular/compiler": "^6.1.4",
+    "@angular/compiler-cli": "^6.1.4",
+    "@angular/core": "^6.1.4",
+    "@angular/forms": "^6.1.4",
+    "@angular/http": "^6.1.4",
+    "@angular/material": "^6.4.6",
+    "@angular/platform-browser": "^6.1.4",
+    "@angular/platform-browser-dynamic": "^6.1.4",
+    "@angular/router": "^6.1.4",
+    "@angular/service-worker": "^6.1.4",
     "@compodoc/compodoc": "^1.0.0-beta.10",
     "@types/googlemaps": "^3.29.2",
     "@types/jest": "^19.2.3",
@@ -124,15 +114,15 @@
     "ng-packagr": "^2.4.0",
     "prettier": "^1.12.1",
     "raw-loader": "^0.5.1",
-    "rxjs": "^5.4.3",
+    "rxjs": "^6.0.0",
     "sonarqube-scanner-node": "^0.0.7",
     "ts-node": "~2.0.0",
     "tslint": "^5.8.0",
-    "typescript": "2.4.2",
+    "typescript": "2.9.2",
     "webpack": "^2.5.1",
     "zone.js": "^0.8.26"
   },
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=8.0.0"
   }
 }
