--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.es5.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -14,6 +14,7 @@
     ]
   },
   "files": [
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "polyfills.ts"
   ]
 }
