fixed scss lint script. Fixed sandboxes and commented un-used variable for currency mask

--- a/angular.json
+++ b/angular.json
@@ -84,7 +84,7 @@
               "src/asset"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
