--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "package": "tar cvf $npm_package_name-$npm_package_version.tgz manifest-* Staticfile dist",
     "sonar": "echo Publishing to sonar for branch: $SONARQUBE_BRANCH && sonarqube-scanner-node -Dsonar.branch=$SONARQUBE_BRANCH",
     "lint": "tslint --project tsconfig.json src/**/*.ts && ng lint",
-    "lint:scss": "stylelint \"src/**/**.scss\"",
+    "lint:scss": "stylelint 'src/**/**.{scss,css}'",
+    "lint:staged-scss": "if [ \"$(git diff origin/develop --name-only | grep '\\.scss')\" == \"\" ]; then echo \"No scss files lint\"; else  stylelint $(git diff origin/develop --name-only | grep '\\.scss'); fi",
     "prettier": "prettier --single-quote --trailing-comma es5 --print-width 100 --write 'src/**/*.{js,ts}' --list-different",
-    "precommit": "npm run prettier && npm run lint",
+    "precommit": "npm run prettier && npm run lint && npm run lint:staged-scss",
     "test": "jest --coverage --json --outputFile=test/jest-output.json",
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand --coverage --json --outputFile=test/jest-output.json && npm run push-to-playground-service",
