--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "ngPackage": {
     "lib": {
-      "entryFile": "./src/index.ts",
+      "entryFile": "./projects/ign/src/.ts",
       "umdModuleIds": {
         "rxjs": "rxjs"
       },
@@ -80,61 +80,63 @@
     "@angular-devkit/build-angular": "~0.7.0",
     "@angular-devkit/build-ng-packagr": "~0.7.0",
     "@angular-devkit/core": "^0.6.8",
-    "@angular/animations": "^6.1.4",
-    "@angular/cdk": "^6.4.6",
-    "@angular/cli": "^6.1.4",
-    "@angular/common": "^6.1.4",
-    "@angular/compiler": "^6.1.4",
-    "@angular/compiler-cli": "^6.1.4",
-    "@angular/core": "^6.1.4",
-    "@angular/forms": "^6.1.4",
-    "@angular/http": "^6.1.4",
-    "@angular/material": "^6.4.6",
-    "@angular/platform-browser": "^6.1.4",
-    "@angular/platform-browser-dynamic": "^6.1.4",
-    "@angular/router": "^6.1.4",
-    "@angular/service-worker": "^6.1.4",
+    "@angular/animations": "^7.1.1",
+    "@angular/cdk": "^7.1.1",
+    "@angular/cli": "^7.1.1",
+    "@angular/common": "^7.1.1",
+    "@angular/compiler": "^7.1.1",
+    "@angular/compiler-cli": "^7.1.1",
+    "@angular/core": "^7.1.1",
+    "@angular/forms": "^7.1.1",
+    "@angular/http": "^7.1.1",
+    "@angular/material": "^7.1.1",
+    "@angular/platform-browser": "^7.1.1",
+    "@angular/platform-browser-dynamic": "^7.1.1",
+    "@angular/router": "^7.1.1",
+    "@angular/service-worker": "^7.1.1",
     "@compodoc/compodoc": "^1.0.0-beta.10",
     "@types/googlemaps": "^3.29.2",
+    "@types/jasmine": "^2.8.11",
     "@types/jest": "^19.2.3",
     "angular-playground": "^5.1.3",
     "chokidar-cli": "^1.2.0",
-    "codelyzer": "^4.0.2",
+    "codelyzer": "^4.5.0",
     "core-js": "^2.4.1",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "husky": "^0.14.3",
     "ignite-common": "^0.14.1",
+    "jasmine": "^3.3.0",
+    "jasmine-core": "^3.3.0",
     "jest": "^22.0.0",
     "jest-preset-angular": "^2.0.2",
+    "karma": "^3.1.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "marked": "^0.3.7",
-    "ng-packagr": "^2.4.0",
+    "ng-packagr": "^4.4.5",
     "ngx-currency": "^1.5.0",
     "prettier": "^1.12.1",
     "raw-loader": "^0.5.1",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.3.3",
     "sonarqube-scanner-node": "^0.0.7",
     "stylelint": "^9.6.0",
     "stylelint-declaration-strict-value": "^1.0.4",
     "ts-node": "~2.0.0",
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
-    "tslint": "^5.8.0",
-    "typescript": "2.9.2",
+    "tslint": "^5.11.0",
+    "typescript": "3.1.6",
     "webpack": "^4.20.2",
     "webpack-dev-server": "^3.1.9",
-    "zone.js": "^0.8.26",
-    "@types/jasmine": "^2.8.11",
-    "jasmine": "^3.3.0",
-    "jasmine-core": "^3.3.0",
-    "karma": "^3.1.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.4.0"
+    "zone.js": "^0.8.26"
   },
   "engines": {
     "node": ">=8.0.0"
   },
   "dependencies": {
+    "autoprefixer": "^9.4.2",
+    "browserslist": "^4.3.5"
   }
 }
