--- a/projects/ign/package.json
+++ b/projects/ign/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ignite-design-system",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/material": "^6.0.0-rc.0 || ^6.0.0",
+    "@angular/common": "^7.1.1",
+    "@angular/core": "^7.1.1",
+    "@angular/material": "^7.1.1",
     "ignite-common": "^0.14.1"
   }
 }
