Added opportunity to build project with bazel build //... command

--- a/projects/ign/src/BUILD.bazel
+++ b/projects/ign/src/BUILD.bazel
@@ -16,6 +16,7 @@ ts_library(
     name = "ignite-system",
     srcs = ["public_api.ts", "index.ts"],
     deps = [
+        "@rxjs",
         "@npm//tslib",
         "@npm//@types",
         "//projects/ign/src/lib:library"
