--- a/package.json
+++ b/package.json
@@ -145,8 +145,7 @@
     "webpack": "^4.20.2",
     "webpack-dev-server": "^3.1.9",
     "zone.js": "^0.8.26",
-    "sass": "^1.16.1",
-    "@angular/bazel": "7.1.3"
+    "sass": "^1.16.1"
   },
   "engines": {
     "node": ">=8.0.0"
